# DeltaMemory

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  README.zh-CN.md  pyproject.toml  repro_v04.sh  repro_v3.sh  repro_v31.sh  requirements-macos-nightly.txt  requirements-macos.txt  requirements.txt
deltamemory/: __init__.py  cli.py  diagnostics.py
docker/: Dockerfile.production  docker-compose.dev.yml
docs/: HISTORY.md  MIGRATION.md  address_bound_delta_memory_plan.md  apple_silicon.md  atb_validation_v1.md  authenticity.md  config.md  design.md  gemma4_prototype.md  methodology.md  preregistration.md  profiler_generality.md  security.md  test_pyramid.md
eval/: build_v31_pairs.py
examples/: delta_attention_demo.txt  demo_prompts.md  smart_memory_demo.py
mneme/: __init__.py
rcvhc/: __init__.py  cli.py
reports/: branch_audit_2026_05_05.md
runs/: INDEX.md  V05_EVIDENCE_ROLLUP.md
scripts/: README.md  aggregate_flagship_q2.py  aggregate_lopi_v33.py  aggregate_lopi_v33_r4.py  aggregate_mHC2.py  aggregate_stage10.py  aggregate_stage11.py  aggregate_w6_counterfact.py  build_cf_1k.py  build_lama_loro_splits.py  build_lama_trex_paraphrase.py  build_paper_figures.py  build_stage11_paraphrase.py  demo_chat.py  deploy_gb10_e2e.sh  dispatch_L1_spark.sh  dispatch_x7nl_spark.sh  download_v08_replication_models.sh  finetune_mhc_wikitext2.py  generate_mhc_figures.py  generate_paper_figures.py  generate_stage11_figures.py  generate_stage8_figure.py  generate_stage9_figures.py  generate_v2_figures.py  launch_x7nl_qwen3.sh  make_delta_experiment_matrix.py  make_v31_readme_figures.py  regen_runs_index.py  run_A_per_method.sh  run_clean_demo.py  run_delta_experiment.py  run_flagship_q3_adversarial_chat.py  run_gemma4_prototype.py  run_intervention_demo.py  run_lopi_ablation.py  run_lopi_norm_probe.py  run_mHC1_6_finetune_gb10.sh  run_mHC2_perturbation_sweep.py  run_mHC3_bank_injection.py  (+26 more)
tests/: conservation_real_models.py  test_a_ablation.py  test_aggregate_flagship_q2.py  test_anb_addressed.py  test_anb_capture_sweep.py  test_arch_adapter_coverage.py  test_atb_eval_perf.py  test_atb_exp_variant_plumbing.py  test_attn_native_bank.py  test_attn_native_bank_validation.py  test_bank_compression.py  test_bank_decay.py  test_bank_persistence.py  (+48 more)
(+2210 files in other folders)
